--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -1,3 +1,7 @@
+.header {
+    height: 80px;
+}
+
 .logo {
     position: relative;
     width: 160px; /* Adjust based on your logo size */
@@ -24,11 +28,13 @@
 }
 
 /* When header has scrolled class */
-.header.scrolled .logo-light {
+.header.scrolled .logo-light,
+.header.page .logo-light {
     opacity: 0;
 }
 
-.header.scrolled .logo-dark {
+.header.scrolled .logo-dark,
+.header.page .logo-dark {
     opacity: 1;
 }
 
@@ -37,7 +43,12 @@
     transition: background-color 0.3s ease;
 }
 
-.header.scrolled {
+.header.scrolled,
+.header.page {
     background-color: #ffffff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.page .navmenu a {
+    color: #3c3c3c !important;
 }
